--- a/prestashop/psdata/themes/child_classic/assets/css/custom.css
+++ b/prestashop/psdata/themes/child_classic/assets/css/custom.css
@@ -689,6 +689,10 @@ form#add-to-cart-or-refresh {
     font-size: 0.85rem;
 }
 
+section.product-discounts.js-product-discounts {
+    margin-left: -1.5rem;
+}
+
 .row {
     margin-right: -15px;
     margin-left: 0px;
